the map was overlaping the form in small screen. corrected the problem

--- a/MDBlocal.css
+++ b/MDBlocal.css
@@ -2022,7 +2022,7 @@ progress {
 
 .form-control {
     display: block;
-    width: 100%;
+    width: 48.5%;
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
@@ -2038,6 +2038,7 @@ progress {
     box-shadow: inset 0 1px 2px rgba(0,0,0,.075);
     transition: all .2s linear
 }
+
 
 @media(prefers-reduced-motion:reduce) {
     .form-control {
